--- a/helix-sitemap.yaml
+++ b/helix-sitemap.yaml
@@ -1,5 +1,6 @@
 sitemaps:
   default:
+    origin: https://main--qantas-demo--guptapawan86.aem.page
     source: /query-index.json
     destination: /sitemap.xml
     lastmod: YYYY-MM-DD
