--- a/helix-sitemap.yaml
+++ b/helix-sitemap.yaml
@@ -1,6 +1,6 @@
 sitemaps:
   default:
-    origin: https://main--qantas-demo--guptapawan86.aem.page
+    origin: www.qantas-demo.com
     source: /query-index.json
     destination: /sitemap.xml
     lastmod: YYYY-MM-DD
